# RayCaster

./: .gitignore  CMakeLists.txt  README.md
src/: main.c  raycaster1.c
